moongose and places in db

--- a/TransparentBudget/views/index.jade
+++ b/TransparentBudget/views/index.jade
@@ -5,7 +5,7 @@ block content
     h1 Прозрачный бюджет
     p.lead Прозрачный бюджет - краундсорсинговая платформа для объяснениязакупок и бюджетов учережлений и выбора наиболее эффективных.
     p
-      a.btn.btn-primary.btn-large(href='http://expressjs.com/') Learn more &raquo;
+      a.btn.btn-primary.btn-large(href='/about') Подробнее &raquo;
   //.row
     .col-md-4
       h2 Getting started
