--- a/TransparentBudget/views/layout.jade
+++ b/TransparentBudget/views/layout.jade
@@ -25,9 +25,11 @@ html
               a(href='/about') О проекте
             li
               a(href='/places' class="dropdown-toggle" data-toggle="dropdown")
-                span(class="caret")&nbsp;
-                Места
+                span(class="caret")
+                &nbsp;Места
               ul(class="dropdown-menu" role="menu")
+                li
+                  a(href='/places') Список мест
                 li
                   a(href='/places/add') Добавить
                 li
