--- a/TransparentBudget/views/places.jade
+++ b/TransparentBudget/views/places.jade
@@ -1,6 +1,11 @@
 extends layout
 
 block content
-  h2 #{title}.
-  h3 #{message}
-  p Use this area to provide additional information.
+  h1 #{title}
+  each item in places
+    h2
+      a(href='/places/#{item.id}')= item.title
+    p
+      =item.description
+    hr
+
