--- a/TransparentBudget/views/contact.jade
+++ b/TransparentBudget/views/contact.jade
@@ -1,19 +1,16 @@
 extends layout
 
 block content
-  h2 #{title}.
-  h3 #{message}
-  address
-    | One Microsoft Way
-    br
-    | Redmond, WA 98052-6399
-    br
-    abbr(title='Phone') P: 
-    | 425.555.0100
+  h2 #{title}
 
   address
     strong Support: 
-    a(href='mailto:Support@example.com') Support@example.com
-    br
-    strong Marketing: 
-    a(href='mailto:Marketing@example.com') Marketing@example.com
+    a(href='mailto:m0rg0t.Anton@gmail.com') m0rg0t.Anton@gmail.com
+
+  .row
+    .col-md-6
+      h3 Lenev Anton
+      img(src='/images/anton1.jpg' alt='Anton Lenev')
+    .col-md-6
+      h3 Rastorgueva Khristina
+      img(src='/images/khristina1.jpg' alt='Rastorgueva Khristina')
