--- a/TransparentBudget/views/index.jade
+++ b/TransparentBudget/views/index.jade
@@ -3,25 +3,19 @@
 block content
   .jumbotron
     h1 Прозрачный бюджет
-    p.lead Прозрачный бюджет - краундсорсинговая платформа для объяснениязакупок и бюджетов учережлений и выбора наиболее эффективных.
+    p.lead Прозрачный бюджет - краундсорсинговая платформа для объяснения закупок и бюджетов учереждений и выбора наиболее эффективных.
     p
       a.btn.btn-primary.btn-large(href='/about') Подробнее &raquo;
-  //.row
-    .col-md-4
-      h2 Getting started
-      p Express gives you a powerful, patterns-based way to build dynamic websites that enables a clean separation of concerns and gives you full control over markup for enjoyable, agile development.
-      p
-        a.btn.btn-default(href='http://expressjs.com/') Learn more &raquo;
-    .col-md-4
-      h2 Get more libraries
-      p Node Packaged Modules is a repository of software for Node.js.
-      p
-        a.btn.btn-default(href='https://www.npmjs.org/') Learn more &raquo;
-    .col-md-4
-      h2 Microsoft Azure
-      p You can easily publish to Microsoft Azure using Node.js Tools for Visual Studio. Find out how you can host your application using a free trial today.
-      p
-        a.btn.btn-default(href='http://azure.microsoft.com') Learn more &raquo;
+
+  .row
+    .col-md-12
+      div(id="slider" class="nivoSlider" style="height: 300px;")
+        img(src="images/slide1 (1).jpg" alt="")
+        img(src="images/slide1 (2).jpg" alt="")
+        img(src="images/slide1 (3).jpg" alt="")
+
   .row
     .col-md-12
       include texts/about_description.html
+  
+
