--- a/TransparentBudget/views/layout.jade
+++ b/TransparentBudget/views/layout.jade
@@ -4,10 +4,15 @@ html
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title #{title} - Прозрачный бюджет
+
     link(rel='stylesheet', type='text/css', href='/stylesheets/bootstrap_yeti.css')
     link(rel='stylesheet', type='text/css', href='/stylesheets/style.css')
     script(src='/javascripts/modernizr-2.6.2.js')
+    script(src='/javascripts/jquery-1.10.2.js')
     script(src="//api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript")
+
+    link(rel="stylesheet" href="/stylesheets/nivo-slider.css" type="text/css")
+    link(rel="stylesheet" href="/stylesheets/themes/dark/dark.css" type="text/css")
   body
     .navbar.navbar-inverse.navbar-fixed-top
       .container
@@ -31,21 +36,52 @@ html
                 li
                   a(href='/places') Список мест
                 li
-                  a(href='/places/add') Добавить
+                  a(href='/places_add') Добавить место
                 li
                   a(href='/places_map') Карта
             li
-              a(href='/documents') Документы
+              a(href='/documents' class="dropdown-toggle" data-toggle="dropdown")
+                span(class="caret")
+                &nbsp;Документы
+              ul(class="dropdown-menu" role="menu")
+                li
+                  a(href='/documents') Список документов
+                li
+                  a(href='/documents/add') Добавить документов
             li
               a(href='/contact') Контакты
+
+          ul.nav.navbar-nav.navbar-right
+            if (user !== undefined)
+              li
+                a(href='#' class="dropdown-toggle" data-toggle="dropdown")
+                  span(class="caret")
+                  &nbsp;Профиль #{user.username}
+                ul(class="dropdown-menu" role="menu")
+                  li
+                    a(href='/profile/#{user.id}') Профиль
+                  li
+                    a(href='/logout') Выйти
+            else
+              li
+                a(href='/login') Войти
+              li
+                a(href='/register') Регистрация
     .container.body-content
       block content
       hr
       footer
         p &copy; #{year} - Прозрачный бюджет
 
-    script(src='/javascripts/jquery-1.10.2.js')
     script(src='/javascripts/bootstrap.js')
     script(src='/javascripts/respond.js')
 
+    script(src="/javascripts/jquery.nivo.slider.pack.js" type="text/javascript")
+    script.
+        $(window).load(function() {
+            $('#slider').nivoSlider();
+        });
+
     block scripts
+
+    include disqus_count.html
