--- a/TransparentBudget/views/places_map.jade
+++ b/TransparentBudget/views/places_map.jade
@@ -1,20 +1,36 @@
 extends layout
 
 block content
-  h2 #{title}.
-  h3 #{message}
+  h2 #{title}
   div(id="map" style="width: 100%; height: 400px")
+
+  - if (typeof(places) != null)
+    != "<script type='text/javascript'>"
+    != "function init1() {"
+    != "var pins = [];"
+    - each place in places
+      != "pins.push({'lat': " + place.lat + ", 'lon':" + place.lon + ", 'title': '"+place.title+"' });"
+    != "init(pins);"
+    != "}"
+    != "</script>"
+
   script.
-      ymaps.ready(init);
+      ymaps.ready(init1);
         var myMap,
             myPlacemark;
 
-        function init(){     
+        function init(items) {  
+            console.log(items);   
             myMap = new ymaps.Map ("map", {
                 center: [55.76, 37.64],
                 zoom: 7
             });
 
-            myPlacemark = new ymaps.Placemark([55.76, 37.64], { content: 'Москва!', balloonContent: 'Столица России' });
+            for (var i=0; i<items.length; ++i) {
+                var item = items[i];
+                console.log(item);
+                var placemark = new ymaps.Placemark([item.lat, item.lon], { content: item.title, balloonContent: item.title });
+                myMap.geoObjects.add(placemark);
+            }         
         }
   
