--- a/TransparentBudget/views/layout.jade
+++ b/TransparentBudget/views/layout.jade
@@ -77,6 +77,7 @@ html
     script(src='/javascripts/respond.js')
 
     script(src="/javascripts/jquery.nivo.slider.pack.js" type="text/javascript")
+    script(src="/javascripts/jquery.form.js" type="text/javascript")
     script.
         $(window).load(function() {
             $('#slider').nivoSlider();
