--- a/TransparentBudget/views/places_add.jade
+++ b/TransparentBudget/views/places_add.jade
@@ -3,7 +3,7 @@
 block content
   h1 #{title}
   div(class="well bs-component")
-    form(class="form-horizontal" method="POST" action="/places/add")
+    form(class="form-horizontal" id="placeAddForm" method="POST" action="/places/add")
       fieldset
         legend Добавление нового места
         div(class="form-group")          
@@ -37,6 +37,68 @@ block content
 
         button(class="btn btn-default") Отмена
         button(type="submit" class="btn btn-primary") Добавить
+
+  script.
+                    // prepare the form when the DOM is ready 
+                    $(document).ready(function() { 
+                        var options = { 
+                            //target:        '#explanationFormOutput',   // target element(s) to be updated with server response 
+                            beforeSubmit:  showRequest,  // pre-submit callback 
+                            success:       showResponse  // post-submit callback 
+ 
+                            // other available options: 
+                            //url:       url         // override for form's 'action' attribute 
+                            //type:      type        // 'get' or 'post', override for form's 'method' attribute 
+                            //dataType:  null        // 'xml', 'script', or 'json' (expected server response type) 
+                            //clearForm: true        // clear all form fields after successful submit 
+                            //resetForm: true        // reset the form after successful submit 
+ 
+                            // $.ajax options can be used here too, for example: 
+                            //timeout:   3000 
+                        }; 
+ 
+                        // bind to the form's submit event 
+                        $('#placeAddForm').submit(function() { 
+                            //console.log("explanationForm");
+                            // inside event callbacks 'this' is the DOM element so we first 
+                            // wrap it in a jQuery object and then invoke ajaxSubmit 
+                            try {
+                                $(this).ajaxSubmit(options); 
+                            } catch(ex) { console.log(ex); }
+ 
+                            // !!! Important !!! 
+                            // always return false to prevent standard browser submit and page navigation 
+                            return false; 
+                        }); 
+                    }); 
+ 
+                    // pre-submit callback 
+                    function showRequest(formData, jqForm, options) { 
+                        // formData is an array; here we use $.param to convert it to a string to display it 
+                        // but the form plugin does this for you automatically when it submits the data 
+                        var queryString = $.param(formData); 
+ 
+                        // jqForm is a jQuery object encapsulating the form element.  To access the 
+                        // DOM element for the form do this: 
+                        // var formElement = jqForm[0]; 
+ 
+                        //alert('About to submit: \n\n' + queryString); 
+ 
+                        // here we could return false to prevent the form from being submitted; 
+                        // returning anything other than false will allow the form submit to continue 
+                        return true; 
+                    } 
+ 
+                    // post-submit callback 
+                    function showResponse(responseText, statusText, xhr, $form)  {                         
+                        try {
+                            $('#placeAddForm')[0].reset();
+                        } catch(ex) { }
+                        //alert('status: ' + statusText + '\n\nresponseText: \n' + responseText + '\n\nThe output div should have already been updated with the responseText.'); 
+                        console.log(responseText);
+                        alert("Новое место добавлено");
+                        window.location.href = "http://transparentbudget.azurewebsites.net/";
+                    } 
 
 
   script.
