Windows Phone page for site

--- a/TransparentBudget/views/layout.jade
+++ b/TransparentBudget/views/layout.jade
@@ -50,6 +50,8 @@ html
                   a(href='/documents/add') Добавить документов
             li
               a(href='/contact') Контакты
+            li
+              a(href='/wp') Windows Phone клиент
 
           ul.nav.navbar-nav.navbar-right
             if (user !== undefined)
