--- a/TransparentBudget/views/wp.jade
+++ b/TransparentBudget/views/wp.jade
@@ -2,6 +2,10 @@
 
 block content
   h2 #{title}
+  br
+  p
+    Клиент для Windows Phone 8 предоставляет возможность просмотра добавленных пользователем мест, в том числе и пользовательских обсуждений
+  br
 
   .row
     .col-md-3
@@ -11,6 +15,8 @@ block content
     .col-md-3
       img(src='/images/wp/wp3.png' alt='wp3' style='width: 80%; text-align: center;')
     .col-md-3
-
-  h3
+      img(src='/images/wp/wp4.png' alt='wp3' style='width: 80%; text-align: center;')
+  
+  hr
+  h3(style='text-align: center;')
     a(href="/files/TransparentBudgetWP8.xap" target="_blank") Скачать
